// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button: color variants: should render alert button 1`] = `
<button
  className="root root_alert"
  disabled={false}
>
  SEEK
</button>
`;

exports[`Button: color variants: should render callToAction button 1`] = `
<button
  className="root root_callToAction"
  disabled={false}
>
  SEEK
</button>
`;

exports[`Button: color variants: should render completion button 1`] = `
<button
  className="root root_completion"
  disabled={false}
>
  SEEK
</button>
`;

exports[`Button: color variants: should render highlight button 1`] = `
<button
  className="root root_highlight"
  disabled={false}
>
  SEEK
</button>
`;

exports[`Button: color variants: should render hyperlink color button 1`] = `
<button
  className="root root_hyperlink"
  disabled={false}
>
  SEEK
</button>
`;

exports[`Button: color variants: should render transparent button 1`] = `
<button
  className="root root_isTransparent"
  disabled={false}
>
  SEEK
</button>
`;

exports[`Button: color variants: should render white ghost button 1`] = `
<button
  className="root root_isGhost root_isWhite"
  disabled={false}
>
  SEEK
</button>
`;

exports[`Button: should render as an anchor with href="https://www.seek.com.au" 1`] = `
<a
  className="root root_hyperlink"
  disabled={false}
  href="https://www.seek.com.au"
>
  SEEK
</a>
`;

exports[`Button: should render as loading 1`] = `
<button
  className="root loading root_callToAction"
  disabled={true}
>
  SEEK
</button>
`;

exports[`Button: should render custom component based on it’s reference 1`] = `
<CustomComponent
  className="root root_callToAction"
  disabled={false}
>
  SEEK
</CustomComponent>
`;

exports[`Button: should render fullwidth button 1`] = `
<button
  className="root fullWidth root_isTransparent"
  disabled={false}
>
  SEEK
</button>
`;

exports[`Button: should render with array of nodes 1`] = `
<button
  className="root root_callToAction"
  disabled={false}
>
  <span>
    SEEK
  </span>
  <span>
    AU
  </span>
</button>
`;

exports[`Button: should render with className 1`] = `
<button
  className="root foo root_callToAction"
  disabled={false}
>
  SEEK
</button>
`;

exports[`Button: should render with node 1`] = `
<button
  className="root root_callToAction"
  disabled={false}
>
  <h5>
    SEEK
  </h5>
</button>
`;
